--- a/index.html
+++ b/index.html
@@ -1,7 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
+
+<head>
+	<title> Sands Films </title>
+	<link rel="shortcut icon" href="logo.ico" />
+	<link rel="stylesheet" type="text/css" href="SandsFilmStudio.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+	<script src="sandsBackgroundJQuery.js"></script>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<div class="page">
+		<div class="slideshow-container">
+			<div class="mySlides fade">
+				<div class="numbertext">1 / 3</div>
+				<img src="building.jpg" class="stretch" alt="">
+			</div>
+			
+			<div class="mySlides fade">
+				<div class="numbertext">2 / 3</div>
+				<img src="picture-library.jpg" class="stretch" alt="">
+			</div>
+			
+			<div class="mySlides fade">
+				<div class="numbertext">3 / 3</div>
+				<img src="Costumes1.png" class="stretch" alt="">
+			</div>
+			
+			<!a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+			<!a class="next" onclick="plusSlides(1)">&#10095;</a>
+		</div>
+		
+		<div class="Header">
+		
+		</div>
+		
+		<div class="elements-container">
+			<div class="menu-banner">
+				<div class="options">
+				
+					<div class="logo"><div class="logo-align"><img src="logo.png" style="position: absolute;float:left;margin:1%;"></div></div>
+					<div class="menu-option"> <div class="menu-button" > Home </div></div>
+					<div class="menu-option"> <div class="menu-button" > About </div></div>
+					<div class="menu-option"> <div class="menu-button" > Good Soldier Schwejk </div></div>
+					<div class="menu-option"> <div class="menu-button" > Venue Hire </div></div>
+					<div class="menu-option"> <div class="menu-button" > Costumes </div></div>
+					<div class="menu-option"> <div class="menu-button" > Picture Library </div></div>
+					<div class="menu-option"> <div class="menu-button" > Cinema & Events</div></div>
+					<div class="menu-option"> <div class="menu-button" > Films </div></div>
+					<div class="menu-option"> <div class="menu-button" > Investors </div></div>
+					<div class="menu-option"> <div class="menu-button" > Shop </div></div>
+					<div class="menu-option"> <div class="menu-button" > Contact Address </div></div>
+				</div>
+			</div>
+		</div>
+
+		<div class="content-pane">
+			<div class="twitter-feed">
+				<a class="twitter-timeline" data-width="400" data-height="600" data-theme="dark" href="https://twitter.com/sandsfilmscine?ref_src=twsrc%5Etfw">Tweets by sandsfilmscine</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+			
+			<div class="facebook-feed">
+			
+			</div>
+		</div>
+		
+		<div class="footer">
+		
+		</div>
+		
+		
+		<br>
+	</div>
+	
+	<!div style="position:absolute; left:48%;">
+		<!span class="dot" onclick="currentSlide(1)"></span>
+		<!span class="dot" onclick="currentSlide(2)"></span>
+		<!span class="dot" onclick="currentSlide(3)"></span>
+	<!/div>
+	
+	
+	<script src="sandsBackground.js"></script>
+	
 </body>
+
 </html>
