--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	--colour3: #C9944F;
 	--colour4: #84CBFF;
 	
-	--panel-colour-1: #FFFDF2;
+	--panel-colour-1: #f9f9f9;
 	--panel-colour-2: #1a4b63;
-	--panel-colour-3: #e1e1e1;
+	--panel-colour-3: #f9f9f9;
+	
+	--footer-colour: #1a4b63;
 }
 html, body {
 	height: 100%;
@@ -39,32 +41,51 @@ html, body {
 	background: var(--panel-colour-1);
 }
 .window-panel-2 {
-	height: 100%;
+	height: 90%;
 	background: var(--panel-colour-2);
 }
+#about-me-text-box {
+	border-radius: 20px; width: 90%; height: 90%; background-color: white; top: 5%; bottom: auto; left: 5%; position: relative;
+}
 .window-panel-3 {
-	height: 100%;
+	height: 90%;
 	background: var(--panel-colour-3);
+}
+.Page-footer {
+	height: 30%;
+	background:var(--footer-colour);
 }
 .colour-option-container {
 	float:left;
 	width: 120px;
 	padding: 20px;
-	margin-top: 15px;
+	padding-top: 35px;
+	padding-bottom: 23px;
+	background-color: gray;
 	/*cursor:url(lama.png),auto;*/
 }
 .snail-shell-js {
 	background: fuchsia;
-	float:left;
+	width: 50%;
+	height: 40%;
+	left: 25%;
+	top: 30%;
+	position: relative;
 }
 .polygon-container {
-	display: block; width: auto; height: auto;
+	display: block; height: 220px;
 }
 .menu-options-svg {
     stroke-width: 5;
     stroke-linecap: round;
     stroke-linejoin: round;
     fill: none;
+    position:relative;
+}
+.menu-options-svg:hover {
+	width: 105%;
+	top: -2.5%;
+	left: -2.5%;
 }
 
 </style>
@@ -111,13 +132,18 @@ function onScrollEvent()
 
 <!--About me panel-->
 <div class="window-panel-2">
-	<div style="border-radius: 3% / 5%; width: 90%; height: 90%; background-color: #FFFFEC; top: 5%; bottom: auto; left: 5%; position: relative;">
+	<div id="about-me-text-box">
 	</div>
 </div>
 
 <!--Projects portfolio-->
 <div class="window-panel-3">
 	
+</div>
+
+<!--References and comments-->
+<div class="Page-footer">
+
 </div>
 </body>
 </html>
