--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	--colour4: #09b081;
 	
 	--panel-colour-1: #f9f9f9;
-	--panel-colour-2: #1a4b63;
+	--panel-colour-2: #092327;
 	--panel-colour-3: #f9f9f9;
 	
 	--footer-colour: #1a4b63;
@@ -155,7 +155,7 @@ function onScrollEvent()
 			</svg>
 		</div>
 		<div class="polygon-container">
-			<svg width="100%" viewbox="0 0 26 46" class="menu-options-svg" style="">
+			<a href="Final Report.pdf" download><svg width="100%" viewbox="0 0 26 46" class="menu-options-svg" style="">
 				<path id="polygon-4" d="m 3 3 l 20 10 l 0 30 l -20 -10 Z"/>
 				<path class="polygon-icon" transform="translate(6.5,13) scale(0.22)" d="M42.5,22h-25c-0.552,0-1,0.447-1,1s0.448,1,1,1h25c0.552,0,1-0.447,1-1S43.052,22,42.5,22z"/>
 				<path class="polygon-icon" transform="translate(6.5,13) scale(0.22)" d="M17.5,16h10c0.552,0,1-0.447,1-1s-0.448-1-1-1h-10c-0.552,0-1,0.447-1,1S16.948,16,17.5,16z"/>
@@ -165,7 +165,7 @@ function onScrollEvent()
 				<path class="polygon-icon" transform="translate(6.5,13) scale(0.22)" d="M38.914,0H6.5v60h47V14.586L38.914,0z M39.5,3.414L50.086,14H39.5V3.414z M8.5,58V2h29v14h14v42H8.5z"/>
 				<path class="polygon-icon" transform="translate(3,10) scale(0.60)" d="M16.5,33C7.402,33,0,25.598,0,16.5S7.402,0,16.5,0S33,7.402,33,16.5S25.598,33,16.5,33z M16.5,1C7.953,1,1,7.953,1,16.5   S7.953,32,16.5,32S32,25.047,32,16.5S25.047,1,16.5,1z" fill="#ffffff"/>
 				<text x="3" y="34" class="polygon-icon">Dissertation</text>
-			</svg>
+			</svg></a>
 		</div>
 	</div>
 	
