--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 html, body {
 	height: 100%;
 	margin: 0;
+	font-family: Arial, Helvetica, sans-serif; font-size: 16px;
+
 }
 #polygon-1 {
 	stroke: var(--colour1);
@@ -61,6 +63,7 @@ html, body {
 .Page-footer {
 	height: 30%;
 	background:var(--footer-colour);
+	color: white;
 }
 .colour-option-container {
 	float:left;
@@ -102,14 +105,10 @@ html, body {
 </style>
 
 <script>
-function onScrollEvent()
-{
-	
-}
 </script>
 
 </head>
-<body onscroll="onScrollEvent()">
+<body>
 
 <!--Window panel 1, contains menu and javascript element-->
 <div class="window-panel-1" style="background-color: ">
@@ -128,7 +127,7 @@ function onScrollEvent()
 				<path class="polygon-icon" transform="translate(3,10) scale(0.60)" d="M16.5,33C7.402,33,0,25.598,0,16.5S7.402,0,16.5,0S33,7.402,33,16.5S25.598,33,16.5,33z M16.5,1C7.953,1,1,7.953,1,16.5   S7.953,32,16.5,32S32,25.047,32,16.5S25.047,1,16.5,1z" fill="#ffffff"/>
 				<path class="polygon-icon" transform="translate(3,10) scale(0.60)" d="M16.5,33c-3.435,0-6.736-1.058-9.549-3.06c-0.15-0.107-0.23-0.29-0.206-0.473s0.148-0.339,0.322-0.403   c4.146-1.535,4.815-2.781,4.815-5.169c0-0.631-0.142-0.838-0.398-1.214c-0.339-0.494-0.803-1.171-1.129-2.939   c-0.048-0.254-0.089-0.274-0.316-0.384c-0.606-0.292-1.163-0.712-1.309-2.628c0-0.928,0.32-1.441,0.585-1.708   c-0.058-0.33-0.153-0.899-0.242-1.519C8.62,10.726,8.6,7.325,12.506,5.744c3.404-1.38,6.121-0.626,6.974,0.273   c0.604,0.019,2.162,0.177,3.246,1.438c1.668,1.94,1.137,6.363,0.955,7.562c0.266,0.261,0.589,0.767,0.589,1.675   c-0.146,1.954-0.703,2.375-1.31,2.666c-0.228,0.11-0.269,0.129-0.316,0.384c-0.326,1.768-0.789,2.445-1.128,2.939   c-0.257,0.375-0.398,0.583-0.398,1.214c0,2.388,0.669,3.634,4.815,5.169c0.174,0.064,0.298,0.219,0.322,0.403   s-0.056,0.366-0.206,0.473C23.236,31.942,19.935,33,16.5,33z M8.317,29.651C10.779,31.191,13.589,32,16.5,32   s5.721-0.809,8.183-2.349c-3.474-1.426-4.565-2.864-4.565-5.755c0-0.941,0.278-1.348,0.573-1.779   c0.304-0.444,0.682-0.996,0.971-2.556c0.139-0.754,0.576-0.964,0.865-1.103c0.311-0.149,0.631-0.303,0.744-1.803   c-0.001-0.764-0.344-0.972-0.358-0.98c-0.184-0.106-0.303-0.329-0.264-0.537c0.248-1.329,0.656-5.474-0.681-7.031   c-0.913-1.062-2.352-1.091-2.626-1.08c-0.046-0.004-0.091-0.005-0.134-0.016c-0.13-0.033-0.35-0.146-0.417-0.262   c-0.272-0.466-2.641-1.403-5.91-0.08c-3.231,1.308-3.238,4.112-2.819,6.682c0.138,0.957,0.289,1.784,0.29,1.788   c0.041,0.225-0.076,0.449-0.283,0.544l0,0c0.003,0-0.339,0.209-0.339,1.008c0.112,1.461,0.433,1.616,0.743,1.765   c0.289,0.139,0.727,0.349,0.866,1.103c0.288,1.56,0.666,2.112,0.97,2.556c0.296,0.431,0.574,0.838,0.574,1.779   C12.883,26.788,11.792,28.226,8.317,29.651z"/>
 				<text x="5" y="34" class="polygon-icon">About me</text>
-			</svg>			
+			</svg>
 		</div>
 		<div class="polygon-container">
 			<svg width="100%" viewbox="0 0 26 46" class="menu-options-svg" style="">
@@ -185,12 +184,22 @@ function onScrollEvent()
 
 <!--Projects portfolio-->
 <div class="window-panel-3">
-	
+	<ul class="portfolio-list">
+		{% for repo in site.github.public_repositories limit:28}
+			{% if repo.fork != true %}
+				<li class="repository">
+					<a href="{{ repo.homepage }}">{{repo.name}}</a>
+				</li>
+			{% endif %}
+		{% endfor %}
+	</ul>
 </div>
 
 <!--References and comments-->
 <div class="Page-footer">
-
+	<p style="padding: 50px; margin:0px">
+		Contact information: 
+	</p>
 </div>
 </body>
 </html>
