--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Oscar trott</title>
+<link rel="icon" href="pageIcon.png">
 <style>
 :root {
 	/*Colours for side bar menu: Blue, Brown, Sand, Orangey/red*/
