Fixed title flair positioning

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@ html, body {
 #name-flair {
 	position:relative;
 	text-align:center;
-	top: -280px;
+	top: 100px;
 	width: 40%;
-	left: 30%;
+	left: 20%;
+	float: left;
 }
 .name-flair-text {
 }
@@ -84,7 +85,7 @@ html, body {
 	font-family: Arial, Helvetica, sans-serif; font-size: 26px;
 	color: #241200c4;
 }
-#profile-picture {
+.picture {
 	width: 15%;
 	float: right;
 	border-style: solid;
@@ -289,9 +290,13 @@ html, body {
 <div class="window-panel-2">
 	<div id="about-me-text-box">
 		<div style="padding: 15px;">
-		<img id="profile-picture" src="Profile picture.jpg"/>
-			<h2>About me</h2>
+		<h2>About me</h2><p>		
+		<img class="picture" src="Profile picture.jpg"/>
 			I recently graduated from the University of Sussex with a first in Computer Science. I have enjoyed taking on challenges, finding solutions, and participating in programming projects both independently and as part of a group. During my alternate education, I developed a need to acquire an understanding of how things work at a fundamental level. 
+		</p>
+		<p><img class="picture" src="sushi making.png" style="float: left;"/>
+			I really 
+		</p>
 		</div>
 	</div>
 </div>
