Removed unused buttons

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ d="M 490.91,91.33
 				<tspan>Oscar</tspan>
 				<tspan x="7" dy="15">Trott</tspan>
 			</text> 
-			<g transform=""translate(0 0) scale(1 -1)"><use xlink:href=".name-flair-text" y="0"></use></g>
+			<g transform="translate(0 0) scale(1 -1)"><use xlink:href=".name-flair-text" y="0"></use></g>
 			
 			<defs>
 				<linearGradient id="skyGradient" x1="100%" y1="100%">
@@ -352,10 +352,10 @@ d="M 490.91,91.33
 	<div id="about-me-text-box">
 		<div style="padding: 15px;">
 		<h2>About me</h2><p>		
-		<img class="picture" src="Profile picture.jpg"/>
+		<img class="picture" src="Profile picture.jpg" onclick="openModal();"/>
 			I recently graduated from the University of Sussex with a first in Computer Science. I have enjoyed taking on challenges, finding solutions, and participating in programming projects both independently and as part of a group. During my alternate education, I developed a need to acquire an understanding of how things work at a fundamental level. 
 		</p>
-		<p><img class="picture" src="sushi making.png" style="float: left;"/>
+		<p><img class="picture" src="sushi making.png" style="float: left;" onclick="openModal();"/>
 			I really 
 		</p>
 		</div>
@@ -378,113 +378,7 @@ d="M 490.91,91.33
 				</div>
 			</div>
 		</a>
-		<a href="" class="repo-link">
-			<div class="repo">
-				<div class="repo-title">
-					iasd
-				</div>
-				<div class="repo-divider"></div>
-				<div class="repo-desc">
-					hello there, I am fluent in over 500 different languages
-				</div>
-			</div>
-		</a>
-		<a href="" class="repo-link">
-			<div class="repo">
-				<div class="repo-title">
-					iasd
-				</div>
-				<div class="repo-divider"></div>
-				<div class="repo-desc">
-					hello there, I am fluent in over 500 different languages
-				</div>
-			</div>
-		</a>
-
-		<a href="" class="repo-link">
-			<div class="repo">
-				<div class="repo-title">
-					iasd
-				</div>
-				<div class="repo-divider"></div>
-				<div class="repo-desc">
-					hello there, I am fluent in over 500 different languages
-				</div>
-			</div>
-		</a>
-
-		<a href="" class="repo-link">
-			<div class="repo">
-				<div class="repo-title">
-					iasd
-				</div>
-				<div class="repo-divider"></div>
-				<div class="repo-desc">
-					hello there, I am fluent in over 500 different languages
-				</div>
-			</div>
-		</a>
-
-		<a href="" class="repo-link">
-			<div class="repo">
-				<div class="repo-title">
-					iasd
-				</div>
-				<div class="repo-divider"></div>
-				<div class="repo-desc">
-					hello there, I am fluent in over 500 different languages
-				</div>
-			</div>
-		</a>
-
-		<a href="" class="repo-link">
-			<div class="repo">
-				<div class="repo-title">
-					iasd
-				</div>
-				<div class="repo-divider"></div>
-				<div class="repo-desc">
-					hello there, I am fluent in over 500 different languages
-				</div>
-			</div>
-		</a>
-
-		<a href="" class="repo-link">
-			<div class="repo">
-				<div class="repo-title">
-					iasd
-				</div>
-				<div class="repo-divider"></div>
-				<div class="repo-desc">
-					hello there, I am fluent in over 500 different languages
-				</div>
-			</div>
-		</a>
-
-		<a href="" class="repo-link">
-			<div class="repo">
-				<div class="repo-title">
-					iasd
-				</div>
-				<div class="repo-divider"></div>
-				<div class="repo-desc">
-					hello there, I am fluent in over 500 different languages
-				</div>
-			</div>
-		</a>
-
-		<a href="" class="repo-link">
-			<div class="repo">
-				<div class="repo-title">
-					iasd
-				</div>
-				<div class="repo-divider"></div>
-				<div class="repo-desc">
-					hello there, I am fluent in over 500 different languages
-				</div>
-			</div>
-		</a>
-
+		
 
 
 
