Added machine learninig repository link

--- a/index.html
+++ b/index.html
@@ -379,6 +379,17 @@ d="M 490.91,91.33
 			</div>
 		</a>
 		
+		<a href="" class="repo-link">
+			<div class="repo">
+				<div class="repo-title">
+					Machine Learning Toolkit
+				</div>
+				<div class="repo-divider"></div>
+				<div class="repo-desc">
+					Four supervised machine learning methods developed using java to learn a feature set and predict an unlabelled datasets classes.
+				</div>
+			</div>
+		</a>
 
 
 
