--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ d="M 490.91,91.33
 		<img class="picture" src="Profile picture.jpg" onclick="openModal();"/>
 			I recently graduated from the University of Sussex with a first in Computer Science. I have enjoyed taking on challenges, finding solutions, and participating in programming projects both independently and as part of a group. During my alternate education, I developed a need to acquire an understanding of how things work at a fundamental level. 
 		</p>
-		<p><img class="picture" src="sushi making.png" style="float: left;" onclick="openModal();"/>
+		<p><img class="picture" src="sushi making.png" style="float: left; margin-right: 10px;" onclick="openModal();"/>
 			I really 
 		</p>
 		</div>
