Added C++ machine learning portfolio and updated about me section

--- a/index.html
+++ b/index.html
@@ -355,8 +355,18 @@ d="M 490.91,91.33
 		<img class="picture" src="Profile picture.jpg" onclick="openModal();"/>
 			I recently graduated from the University of Sussex with a first in Computer Science. I have enjoyed taking on challenges, finding solutions, and participating in programming projects both independently and as part of a group. During my alternate education, I developed a need to acquire an understanding of how things work at a fundamental level. 
 		</p>
-		<p><img class="picture" src="sushi making.png" style="float: left; margin-right: 10px;" onclick="openModal();"/>
-			I really 
+		<p style="margin-bottom:4px;"><img class="picture" src="sushi making.png" style="float: left; margin-right: 10px;" onclick="openModal();"/>
+			My hobbies and interests are quite varied and i enjoy learning how to do things for myself, for instance, I love sushi as a food so I taught myself how to make it just the way I like it.<br>
+			<br>Other hobbies include:</p>
+		<ul style="float:left;margin-top:0px;">
+			<li>Skiing</li>
+			<li>Gaming</li>
+			<li>Coding</li>
+			<li>Cooking/Baking</li>
+			<li>3D Modelling and VFX</li>
+			<li>Physics and Astronomy</li>
+		</ul> 
+		<p>
 		</p>
 		</div>
 	</div>
@@ -379,7 +389,7 @@ d="M 490.91,91.33
 			</div>
 		</a>
 		
-		<a href="" class="repo-link">
+		<a href="https://github.com/OscarTrott/Machine-learning-toolkit" class="repo-link">
 			<div class="repo">
 				<div class="repo-title">
 					Machine Learning Toolkit
@@ -391,6 +401,17 @@ d="M 490.91,91.33
 			</div>
 		</a>
 
+		<a href="https://github.com/OscarTrott/Machine-Learning-Methods-C-" class="repo-link">
+			<div class="repo">
+				<div class="repo-title">
+					Machine Learning Methods C++
+				</div>
+				<div class="repo-divider"></div>
+				<div class="repo-desc">
+					A number of machine learning methods implemented in C++.
+				</div>
+			</div>
+		</a>
 
 
 	</div>
