--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ d="M 490.91,91.33
 			I recently graduated from the University of Sussex with a first in Computer Science. I have enjoyed taking on challenges, finding solutions, and participating in programming projects both independently and as part of a group. During my alternate education, I developed a need to acquire an understanding of how things work at a fundamental level. 
 		</p>
 		<p style="margin-bottom:4px;"><img class="picture" src="sushi making.png" style="float: left; margin-right: 10px;" onclick="openModal();"/>
-			My hobbies and interests are quite varied and i enjoy learning how to do things for myself, for instance, I love sushi as a food so I taught myself how to make it just the way I like it.<br>
+			My hobbies and interests are quite varied and I enjoy learning how to do things for myself, for instance, I love sushi as a food so I taught myself how to make it just the way I like it.<br>
 			<br>Other hobbies include:</p>
 		<ul style="float:left;margin-top:0px;">
 			<li>Skiing</li>
@@ -400,7 +400,7 @@ d="M 490.91,91.33
 				</div>
 			</div>
 		</a>
-
+<!--
 		<a href="https://github.com/OscarTrott/Machine-Learning-Methods-C-" class="repo-link">
 			<div class="repo">
 				<div class="repo-title">
@@ -412,6 +412,7 @@ d="M 490.91,91.33
 				</div>
 			</div>
 		</a>
+		-->
 
 		<a href="https://github.com/OscarTrott/oscartrott.github.io" class="repo-link">
 			<div class="repo">
