Added planet rendering simulation,
not perfect, but fine for now

--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@ d="M 490.91,91.33
 				</div>
 			</div>
 		</a>
-<!--
-		<a href="https://github.com/OscarTrott/Machine-Learning-Methods-C-" class="repo-link">
+
+		<a href="planet_rendering.html" class="repo-link">
 			<div class="repo">
 				<div class="repo-title">
 					Machine Learning Methods C++
@@ -412,7 +412,6 @@ d="M 490.91,91.33
 				</div>
 			</div>
 		</a>
-		-->
 
 		<a href="https://github.com/OscarTrott/oscartrott.github.io" class="repo-link">
 			<div class="repo">
