Made some things betterer! Ring is rendered now and background stars are much dimmer

--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@ d="M 490.91,91.33
 		<a href="planet_rendering.html" class="repo-link">
 			<div class="repo">
 				<div class="repo-title">
-					Machine Learning Methods C++
+					A 3d planet rendering
 				</div>
 				<div class="repo-divider"></div>
 				<div class="repo-desc">
-					A number of machine learning methods implemented in C++.
+					Renders planet earth along with it's major cities and allows for the user to determine the "optimal" location for an orbital ring to be placed. \nWritten in Javascript/HTML using THREE JS and WebGL for rendering.
 				</div>
 			</div>
 		</a>
